--- a/index.html
+++ b/index.html
@@ -16,6 +16,75 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div class="container">
+
+            <nav class="bx navbar">
+                <div class="header-logo">
+                    Header Logo
+                </div>
+                <div class="header-links">
+                    <a href="#">Header Link 1</a>
+                    <a href="#">Header Link 2</a>
+                    <a href="#">Header Link 3</a>
+                </div>
+            </nav>
+
+            <div class="bx hero">
+                <div class="hero-1 hero-cta">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    </p>
+                    <button type="button">Sign Up</button>
+                </div>
+                <div class="hero-1 hero-image">
+                    This is a placeholder for an image
+                </div>
+            </div>
+
+            <div class="bx content">
+                <h2>Some random information.</h2>
+                <div class="content-info">
+                    <div>
+                        <img src="#">
+                        <p>this is some subtext under an illustration</p>
+                    </div>
+                    <div>
+                        <img src="#">
+                        <p>this is some subtext under an illustration</p>
+                    </div>
+                    <div>
+                        <img src="#">
+                        <p>this is some subtext under an illustration</p>
+                    </div>
+                    <div>
+                        <img src="#">
+                        <p>this is some subtext under an illustration</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bx quote">
+                <p>
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                </p>
+                <b>
+                    - Thor, God of Thunder
+                </b>
+            </div>
+            <div class="bx sign-up">
+                <div class="sign-items sign-text">
+                    <h3>Call to action! It's time!</h3>
+                    <p>
+                        Sign up for our product by clicking that button right over there!
+                    </p>
+                </div>
+                <div class="sign-items sign-button">
+                    <button type="button">Sign Up</button>
+                </div>
+            </div>
+            <div class="bx footer">
+                <p>Copyright © The Odin Project 2021</p>
+            </div>
+        </div>
         
         <script src="" async defer></script>
     </body>
