--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             </nav>
 
             <div class="bx hero">
-                <div class="hero-1 hero-cta">
+                <div class="hero-cta">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
                     </p>
                     <button type="button">Sign Up</button>
                 </div>
-                <div class="hero-1 hero-image">
-                    This is a placeholder for an image
+                <div class="hero-image image-box">
+                    <p>This is a placeholder for an image</p>
                 </div>
             </div>
 
@@ -77,8 +77,8 @@
                         Sign up for our product by clicking that button right over there!
                     </p>
                 </div>
-                <div class="sign-items sign-button">
-                    <button type="button">Sign Up</button>
+                <div class="button-sign">
+                    <button>Sign Up</button>
                 </div>
             </div>
             <div class="bx footer">
