--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
         <div class="container">
 
-            <nav class="bx navbar">
+            <nav class="bx-navbar">
                 <div class="header-logo">
                     Header Logo
                 </div>
@@ -29,7 +29,7 @@
                 </div>
             </nav>
 
-            <div class="bx hero">
+            <div class="bx-hero">
                 <div class="hero-cta">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
@@ -41,47 +41,47 @@
                 </div>
             </div>
 
-            <div class="bx content">
+            <div class="bx-content">
                 <h2>Some random information.</h2>
                 <div class="content-info">
                     <div>
                         <img src="#">
-                        <p>this is some subtext under an illustration</p>
+                        <p>This is some subtext under an illustration</p>
                     </div>
                     <div>
                         <img src="#">
-                        <p>this is some subtext under an illustration</p>
+                        <p>This is some subtext under an illustration</p>
                     </div>
                     <div>
                         <img src="#">
-                        <p>this is some subtext under an illustration</p>
+                        <p>This is some subtext under an illustration</p>
                     </div>
                     <div>
                         <img src="#">
-                        <p>this is some subtext under an illustration</p>
+                        <p>This is some subtext under an illustration</p>
                     </div>
                 </div>
             </div>
-            <div class="bx quote">
+            <div class="bx-quote">
+                <div class="quote-cta">
                 <p>
                     This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
                 </p>
-                <b>
-                    - Thor, God of Thunder
-                </b>
+                <div class="quote-name">- Thor, God of Thunder</div>
             </div>
-            <div class="bx sign-up">
-                <div class="sign-items sign-text">
+            </div>
+            <div class="bx-sign">
+                <div class="sign-cta">
                     <h3>Call to action! It's time!</h3>
-                    <p>
-                        Sign up for our product by clicking that button right over there!
-                    </p>
+                        <p>
+                            Sign up for our product by clicking that button right over there!
+                        </p>
                 </div>
-                <div class="button-sign">
+                <div class="sign-button button-box">
                     <button>Sign Up</button>
                 </div>
             </div>
-            <div class="bx footer">
+            <div class="bx-footer">
                 <p>Copyright © The Odin Project 2021</p>
             </div>
         </div>
